--- a/pages/index.html
+++ b/pages/index.html
@@ -34,18 +34,18 @@ description: When Go meets Raspberry Pi
   </p>
 </div>
 <div class="span6">
-  <h4><a href="/deal_alert">海外代购Deal实时提醒</a></h4>
+  <h4><a href="http://go.myalert.info/deal_alert">海外代购Deal实时提醒</a></h4>
   <p>设置关键词，当有优惠出现时，第一时间通过微博@提醒你</p>
+
+  <h4><a href="http://go.myalert.info/twitter">微博同步到Twitter</a></h4>
+  <p>打开你和世界交流的窗口：<a href="https://github.com/hugozhu/weibo2twitter/blob/master/src/twitter.go">同步程序代码</a>
+  </p>
 
   <h4><a href="http://laiwang.myalert.info/">微博同步到来往</a></h4>
   <p>设置关联后，你发的微博会自动同步到来往 - <a href="http://laiwang.com">laiwang.com</a>，包括上传或转发的图片
      <a href="https://github.com/hugozhu/weibo2twitter/blob/master/src/laiwang.go">同步程序代码</a>   
   </p>
   
-  <h4><a href="http://laiwang.myalert.info/">微博同步到Twitter</a></h4>
-  <p>打开你和世界交流的窗口：<a href="https://github.com/hugozhu/weibo2twitter/blob/master/src/twitter.go">同步程序代码</a>
-  </p>          
-
   <h4><a href="http://myalert.info/">微信查实时股价</a></h4>
   <p> <div align="center"><img src="http://go.myalert.info/img/qrcode.png" width="160" height="160"/></div>
       关注微信号： <b>myalert</b> ，输入股票代码或公司名称即可获取实时报价，这个服务后台只有一个Pi。
