--- a/pages/index.html
+++ b/pages/index.html
@@ -56,8 +56,21 @@ description: When Go meets Raspberry Pi
         </div>  
       </div>
 
-<hr/>      
-<div>
+<hr/>
+<div style="float:right;padding-right:80px">
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-5109060569865704";
+/* myalert.info */
+google_ad_slot = "8432858182";
+google_ad_width = 300;
+google_ad_height = 250;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+<div style="height:250px">
 <ul><h5>友情链接</h5>
 <li><a href="http://pi.k17.im" target="_blank">Pi with Nowa</a></li>
 <li><a href="http://kongwu.net" target="_blank">Kongwu.NET</a></li>
