--- a/pages/index.html
+++ b/pages/index.html
@@ -70,7 +70,8 @@ google_ad_height = 250;
 src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 </div>
-<div style="height:250px">
+
+<div>
 <ul><h5>最近文章</h5>  
 {{# posts_latest }}
 <li><a href="{{url}}">{{title}}</a></li>
