--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@ description: When Go meets Raspberry Pi
 
 <div class="row-fluid marketing">
 <div class="span6">
-  <h4><a href="https://github.com/hugozhu/yunpan_pi">阿里云盘Pi客户端</a> <font color="red">(进行中...)</font></h4>
+  <h4><a href="https://github.com/hugozhu/yunpan_pi">阿里云盘Pi客户端</a></h4>
   <p>已完成根据文件最后修改时间的同步</p>
 
   <h4><a href="http://myalert.info/">实时股价提醒</a></h4>
