--- a/pages/index.html
+++ b/pages/index.html
@@ -10,6 +10,7 @@ description: When Go meets Raspberry Pi
 <hr/>
 <div class="row-fluid marketing">
 <div class="span6">
+<h3>最近文章</h3>
   {{# posts_latest }}
   <h4><a href="{{url}}">{{title}}</a></h4>
   <p>{{description}}</p>
@@ -17,6 +18,7 @@ description: When Go meets Raspberry Pi
 </div>
 
 <div class="span6">
+<h3>最近项目</h3>
 <h4><a href="http://myalert.info/">实时股价提醒</a></h4>
   <p>支持港股和美股的实时报价和多种提醒方式(手机Push消息，Web长连接Poll，<a href="http://weibo.com/myalert">微博@提醒</a>），并提供持仓一览等功能
      <br/><a href="http://42.120.49.45/download/">iPhone客户端下载</a>
