--- a/pages/archive.html
+++ b/pages/archive.html
@@ -2,6 +2,10 @@
 description:
 ---
 
+{{#page}}
+    {{>right_ads}}
+{{/page}}
+
 {{# db.posts.collated }}
   {{> posts_collate }}
 {{/ db.posts.collated }}
