--- a/pages/index.html
+++ b/pages/index.html
@@ -78,6 +78,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 <div>
 <ul><h5>友情链接（网站部署在Pi上的好友）</h5>
 <li><a href="http://kongwu.net" target="_blank">空无</a></li>
+<li><a href="http://a7b.cn/" target="_blank">伏威</a></li>
 <li><a href="http://pi.k17.im" target="_blank">异翅</a></li>
 <li><a href="http://jacksontian.eicp.net" target="_blank">朴灵</a></li>
 </ul>
