--- a/pages/index.html
+++ b/pages/index.html
@@ -77,10 +77,8 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 
 <div>
 <ul><h5>友情链接（网站部署在Pi上的好友）</h5>
-<li><a href="http://kongwu.net" target="_blank">空无</a></li>
-<li><a href="http://a7b.cn/" target="_blank">伏威</a></li>
-<li><a href="http://pi.k17.im" target="_blank">异翅</a></li>
-<li><a href="http://jacksontian.eicp.net" target="_blank">朴灵</a></li>
+<li><a href="http://kongwu.net" target="_blank">空无</a> <a href="http://a7b.cn/" target="_blank">伏威</a></li>
+<li><a href="http://pi.k17.im" target="_blank">异翅</a> <a href="http://jacksontian.eicp.net" target="_blank">朴灵</a></li>
 </ul>
             
 </div>
@@ -89,6 +87,10 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 <img src="https://api.cosm.com/v2/feeds/92372/datastreams/1.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Raspberry%20Pi%E7%9A%84CPU%20Load&show_axis_labels=false&detailed_grid=true&scale=&timezone=8"/>
 
 <img src="https://api.cosm.com/v2/feeds/92372/datastreams/2.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Raspberry%20Pi%E7%9A%84CPU%E6%B8%A9%E5%BA%A6&show_axis_labels=false&detailed_grid=true&scale=&timezone=8"/>
+
+<img src="https://api.cosm.com/v2/feeds/119331/datastreams/1.png?width=340&height=180&colour=%23f15a24&duration=6hours&title=室内湿度&show_axis_labels=false&detailed_grid=true&scale=&timezone=8"/>
+
+<img src="https://api.cosm.com/v2/feeds/119331/datastreams/2.png?width=340&height=180&colour=%23f15a24&duration=6hours&title=室内温度&show_axis_labels=false&detailed_grid=true&scale=&timezone=8"/>
 </div>
 
 <br/><br/>
