--- a/pages/index.html
+++ b/pages/index.html
@@ -85,7 +85,7 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
             
 </div>
 <hr/>              
-<div align="center">
+<a href="https://cosm.com/users/hugozhu"><div align="center">
 <img src="https://api.cosm.com/v2/feeds/92372/datastreams/1.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Raspberry%20Pi%E7%9A%84CPU%20Load&show_axis_labels=false&detailed_grid=true&scale=&timezone=8"/>
 
 <img src="https://api.cosm.com/v2/feeds/92372/datastreams/2.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Raspberry%20Pi%E7%9A%84CPU%E6%B8%A9%E5%BA%A6&show_axis_labels=false&detailed_grid=true&scale=&timezone=8"/>
@@ -93,6 +93,6 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 <img src="https://api.cosm.com/v2/feeds/119331/datastreams/2.png?width=340&height=180&colour=%23f15a24&duration=2days&title=室内湿度&show_axis_labels=false&detailed_grid=true&scale=&timezone=8"/>
 
 <img src="https://api.cosm.com/v2/feeds/119331/datastreams/1.png?width=340&height=180&colour=%23f15a24&duration=2days&title=室内温度&show_axis_labels=false&detailed_grid=true&scale=&timezone=8"/>
-</div>
+</div></a>
 
 <br/><br/>
