--- a/pages/index.html
+++ b/pages/index.html
@@ -15,6 +15,12 @@ description: When Go meets Raspberry Pi
   <h4><a href="{{url}}">{{title}}</a></h4>
   <p>{{description}}</p>
   {{/ posts_latest }}
+
+  <div class="pagination">
+    <ul>
+        <li><a href="/posts/2/">更多文章...</a></li>
+    </ul>
+  </div>  
 </div>
 
 <div class="span6">
