--- a/pages/index.html
+++ b/pages/index.html
@@ -26,8 +26,7 @@ description: When Go meets Raspberry Pi
 <div class="span6">
 <h3>最近项目</h3>
   <h4><a href="http://myalert.info/">WiringPi-Go</a></h4>
-  <p>
-  </p>
+  <p>使用Go语言来实现GPIO编程</p>
   <h4><a href="http://myalert.info/">实时股价提醒</a></h4>
   <p>支持港股和美股的实时报价和多种提醒方式(手机Push消息，Web长连接Poll，<a href="http://weibo.com/myalert">微博@提醒</a>），并提供持仓一览等功能
      <a href="http://42.120.49.45/download/">iPhone客户端下载</a>
