--- a/pages/index.html
+++ b/pages/index.html
@@ -59,17 +59,7 @@ description: When Go meets Raspberry Pi
 
 <hr/>
 <div style="float:right;padding-right:80px">
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-5109060569865704";
-/* myalert.info */
-google_ad_slot = "8432858182";
-google_ad_width = 300;
-google_ad_height = 250;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<iframe width="300" height="250" src="http://www.taobao.com/go/rgn/union/link_tmall.php?size=300x250&pid=mm_12926928_0_0" frameborder="0" marginheight="0" marginwidth="0" border="0" scrolling="no" name="alimamaifrm"></iframe>
 </div>
 
 <ul><h5>常用链接</h5>
