--- a/pages/index.html
+++ b/pages/index.html
@@ -59,7 +59,7 @@ description: When Go meets Raspberry Pi
 
 <hr/>
 <div style="float:right;padding-right:80px">
-<iframe width="300" height="250" src="http://www.taobao.com/go/rgn/union/link_tmall.php?size=300x250&pid=mm_12926928_0_0" frameborder="0" marginheight="0" marginwidth="0" border="0" scrolling="no" name="alimamaifrm"></iframe>
+<a href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5Gze6lARW%2F6wppaeuAahpi92q7zwCUfaJaaRSsqaln1AWSo6Ao%2BYc%3D"><img src="http://img03.taobaocdn.com/bao/uploaded/i3/14364033184428336/T13oBtXwRbXXXXXXXX_!!0-item_pic.jpg_310x310.jpg"/></a>
 </div>
 
 <ul><h5>常用链接</h5>
