--- a/pages/index.html
+++ b/pages/index.html
@@ -78,6 +78,7 @@ description: When Go meets Raspberry Pi
 <li><a href="http://kongwu.net" target="_blank">空无</a></li>
 <li><a href="http://a7b.cn/" target="_blank">伏威</a></li>
 <li><a href="http://dqylyln.dyndns.org" target="_blank">齐昦</a></li>
+<li><a href="http://mzhou.tk" target="_blank">Min Zhou</a></li>
 <li><a href="http://pi.k17.im" target="_blank">异翅</a>（当机中...）</li>
 <li><a href="http://jacksontian.eicp.net" target="_blank">朴灵</a>（当机中...）</li>
 </ul>
