--- a/pages/index.html
+++ b/pages/index.html
@@ -59,7 +59,7 @@ description: When Go meets Raspberry Pi
 
 <hr/>
 
-<div style="float:right;padding-right:80px"><a onclick="clk_track('ad_home_pi')" href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5HbKnj4dMMnZV62W6Vrr4aYHB0LrtzeEqVzfF8UMo0UFO03%2Faad4M%3D"><img style="border:1px solid #ccc" width="270" height="270" src="http://img.taobaocdn.com/bao/uploaded/i3/14364033184428336/T13oBtXwRbXXXXXXXX_!!0-item_pic.jpg_270x270.jpg"/></a><div style="text-align:right">淘宝推广</div></div>
+<div style="float:right;padding-right:80px"><a onclick="clk_track('ad_home_pi')" href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5HbKnj4dMMnZV62W6Vrr4aYHB0LrtzeEqVzfF8UMo0UFO03%2Faad4M%3D"><img style="border:1px solid #ccc" width="270" height="270" src="http://img03.taobaocdn.com/bao/uploaded/i3/14364033184428336/T13oBtXwRbXXXXXXXX_!!0-item_pic.jpg_270x270.jpg"/></a><div style="text-align:right">淘宝推广</div></div>
 
 <ul><h5>常用链接</h5>
 <li><a href="https://gist.github.com/4440996">在Raspberry Pi上听豆瓣电台</a></li>
