--- a/pages/index.html
+++ b/pages/index.html
@@ -80,7 +80,7 @@ description: When Go meets Raspberry Pi
 <li><a href="http://dqylyln.dyndns.org" target="_blank">齐昦</a></li>
 <li><a href="http://minzhou.us.to" target="_blank">Min Zhou</a></li>
 <li><a href="http://rpi.freemindworld.com" target="_blank">樊夕</a></li>
-<li><a href="http://pi.k17.im" target="_blank">异翅</a>（当机中...）</li>
+<li><a href="http://pi.k17.im" target="_blank">异翅</a></li>
 <li><a href="http://jacksontian.eicp.net" target="_blank">朴灵</a>（当机中...）</li>
 </ul>
 </div>
