--- a/pages/tools.html
+++ b/pages/tools.html
@@ -5,7 +5,7 @@ description: Very helpful tools for development
 
 {{>right_ads}}
 
-# URL Encode/Decode
+<h1>URL Encode/Decode</h1>
 
 <script type="text/javascript">
 function encode() {
@@ -28,7 +28,7 @@ function decode() {
 </div>
 </form>
 
-# JSON Pretty Print
+<h1>JSON Pretty Print</h1>
 
 <form method="POST" action="http://go.myalert.info/json.php">
 <textarea name="json" cols="200" rows="5" id="json" style="width:500px;height:50px"></textarea>    
@@ -38,6 +38,9 @@ function decode() {
 </form>
 
 
+<h1>Guestbook</h1>
+
+<div style="width:500px">
 <!-- jquery required -->
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <!-- petal begin -->
@@ -49,4 +52,5 @@ function decode() {
     })
 </script>
 <div class="petal"></div>
+</div>
 <!-- petal end -->
