--- a/pages/index.html
+++ b/pages/index.html
@@ -59,7 +59,25 @@ description: When Go meets Raspberry Pi
 
 <hr/>
 
-<div style="float:right;padding-right:80px"><a onclick="clk_track('ad_home_pi')" href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5HbKnj4dMMnZV62W6Vrr4aYHB0LrtzeEqVzfF8UMo0UFO03%2Faad4M%3D"><img style="border:1px solid #ccc" width="270" height="270" src="http://img03.taobaocdn.com/bao/uploaded/i3/14364033184428336/T13oBtXwRbXXXXXXXX_!!0-item_pic.jpg_270x270.jpg"/></a><div style="text-align:right">淘宝推广</div></div>
+<div style="float:right;padding-right:80px">
+<script type="text/javascript">
+alimama_pid="mm_12926928_3484851_11423954";
+alimama_type="g";
+alimama_tks={};
+alimama_tks.style_i=1;
+alimama_tks.lg_i=1;
+alimama_tks.w_i="300";
+alimama_tks.h_i=45;
+alimama_tks.btn_i=1;
+alimama_tks.txt_s="树莓派";
+alimama_tks.hot_i=0;
+alimama_tks.hc_c="0065FF";
+alimama_tks.cid_i="50008090";
+alimama_tks.c_i=0;
+</script>
+<script type="text/javascript" src="http://a.alimama.cn/inf.js"></script>
+<br/>
+  <a onclick="clk_track('ad_home_pi')" href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5HbKnj4dMMnZV62W6Vrr4aYHB0LrtzeEqVzfF8UMo0UFO03%2Faad4M%3D"><img style="border:1px solid #ccc;" width="270" height="270" src="http://img03.taobaocdn.com/bao/uploaded/i3/14364033184428336/T13oBtXwRbXXXXXXXX_!!0-item_pic.jpg_270x270.jpg"/></a><div style="text-align:right;padding-right:40px">淘宝推广</div></div>
 
 <ul><h5>常用链接</h5>
 <li><a href="https://gist.github.com/4440996">在Raspberry Pi上听豆瓣电台</a></li>
