--- a/pages/index.html
+++ b/pages/index.html
@@ -92,13 +92,13 @@ alimama_tks.c_i=0;
 </ul>
 
 <div>
-<ul><h5>友情链接（网站部署在Pi上的好友）</h5>
-<li><a href="http://kongwu.net" target="_blank">空无</a></li>
-<li><a href="http://a7b.cn/" target="_blank">伏威</a></li>
-<li><a href="http://dqylyln.dyndns.org" target="_blank">齐昦</a></li>
-<li><a href="http://minzhou.us.to" target="_blank">Min Zhou</a></li>
-<li><a href="http://rpi.freemindworld.com" target="_blank">樊夕</a></li>
-<li><a href="http://blog.donghao.org" target="_blank">三百</a></li>
+<ul><h5>友情链接 </h5>
+<li><a href="http://kongwu.net" target="_blank">空无</a> 搞数据的</li>
+<li><a href="http://a7b.cn/" target="_blank">伏威</a> 搞无线的</li>
+<li><a href="http://dqylyln.dyndns.org" target="_blank">齐昦</a> 搞应用的</li>
+<li><a href="http://minzhou.us.to" target="_blank">Min Zhou</a> 搞分布式的</li>
+<li><a href="http://rpi.freemindworld.com" target="_blank">樊夕</a> 搞搜索的</li>
+<li><a href="http://blog.donghao.org" target="_blank">三百</a> 搞内核的</li>
 </ul>
 </div>
 
