--- a/pages/index.html
+++ b/pages/index.html
@@ -32,14 +32,14 @@ description: When Go meets Raspberry Pi
      <a href="http://42.120.49.45/download/">iPhone客户端下载</a>
   </p>
 
-  <h4><a href="http://go.myalert.info/deal_alert">海外代购Deal实时提醒</a></h4>
+  <h4><a href="https://go.myalert.info/deal_alert">海外代购Deal实时提醒</a></h4>
   <p>设置关键词，当有优惠出现时，第一时间通过微博@提醒你,数据包括了微博上的海淘大号，以及同步过来的Dealsea和Fatwallet上的数据集中在<a href="http://weibo.com/mydealsea">@海外购优惠汇</a></p>
 
-  <h4><a href="http://go.myalert.info/twitter">微博同步到Twitter</a></h4>
+  <h4><a href="https://go.myalert.info/twitter">微博同步到Twitter</a></h4>
   <p>打开你和世界交流的窗口：<a href="https://github.com/hugozhu/weibo2twitter/blob/master/src/twitter.go">同步程序代码</a>
   </p>
 
-  <h4><a href="http://laiwang.myalert.info/">微博同步到来往</a></h4>
+  <h4><a href="https://laiwang.myalert.info/">微博同步到来往</a></h4>
   <p>设置关联后，你发的微博会自动同步到来往：
      <a href="https://github.com/hugozhu/weibo2twitter/blob/master/src/laiwang.go">同步程序代码</a>
   </p>
@@ -48,7 +48,7 @@ description: When Go meets Raspberry Pi
   <p>已完成根据文件最后修改时间的同步</p>
 
   <h4><a href="http://myalert.info/">微信查实时股价</a></h4>
-  <p> <div align="center"><img src="http://go.myalert.info/img/qrcode.png" width="160" height="160"/></div>
+  <p> <div align="center"><img src="/assets/media/qrcode.png" width="160" height="160"/></div>
       关注微信号： <b>myalert</b> ，输入股票代码或公司名称即可获取实时报价，这个服务后台只有一个Pi。
 <div>
 <br/>
