--- a/pages/tools.html
+++ b/pages/tools.html
@@ -30,7 +30,7 @@ function decode() {
 
 <h1>JSON Pretty Print</h1>
 
-<form method="POST" action="http://go.myalert.info/json.php">
+<form method="POST" action="https://go.myalert.info/json.php">
 <textarea name="json" cols="200" rows="5" id="json" style="width:500px;height:50px"></textarea>    
 <div>
 <input type="submit" value="Pretty Print">
