--- a/pages/index.html
+++ b/pages/index.html
@@ -39,7 +39,7 @@ description: When Go meets Raspberry Pi
   <p>打开你和世界交流的窗口：<a href="https://github.com/hugozhu/weibo2twitter/blob/master/src/twitter.go">同步程序代码</a>
   </p>
 
-  <h4><a href="https://laiwang.myalert.info/">微博同步到来往</a></h4>
+  <h4><a href="https://go.myalert.info/laiwang">微博同步到来往</a></h4>
   <p>设置关联后，你发的微博会自动同步到来往：
      <a href="https://github.com/hugozhu/weibo2twitter/blob/master/src/laiwang.go">同步程序代码</a>
   </p>
