--- a/pages/index.html
+++ b/pages/index.html
@@ -99,6 +99,7 @@ alimama_tks.c_i=0;
 <li><a href="http://minzhou.us.to" target="_blank">Min Zhou</a> 搞分布式的</li>
 <li><a href="http://rpi.freemindworld.com" target="_blank">樊夕</a> 搞搜索的</li>
 <li><a href="http://blog.donghao.org" target="_blank">三百</a> 搞内核的</li>
+<li><a href="http://www.bigendian123.com" target="_blank">Skoo</a> 搞Golang的</li>
 </ul>
 </div>
 
