--- a/gitcafe/pages/index.html
+++ b/gitcafe/pages/index.html
@@ -179,19 +179,12 @@ alimama_height=250;
   
 
 
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/">When Go meets Raspberry Pi</a></li>
 
 
 
   
-
-
-  <li><a href="/archive">Archive</a></li>
-
-
-
-  
-  <li class="active"><a href="/tags" class="active">Tags</a></li>
+  <li class="active"><a href="/tools" class="active">Tools</a></li>
 
 
 
@@ -214,14 +207,14 @@ alimama_height=250;
   
 
 
-  <li><a href="/">When Go meets Raspberry Pi</a></li>
+  <li><a href="/tags">Tags</a></li>
 
 
 
   
 
 
-  <li><a href="/tools">Tools</a></li>
+  <li><a href="/archive">Archive</a></li>
 
 
 
@@ -229,6 +222,13 @@ alimama_height=250;
 
 
   <li><a href="/about">About Me</a></li>
+
+
+
+  
+
+
+  <li><a href="/categories">Categories</a></li>
 
 
 
