--- a/gitcafe/pages/index.html
+++ b/gitcafe/pages/index.html
@@ -179,12 +179,19 @@ alimama_height=250;
   
 
 
+  <li><a href="/categories">Categories</a></li>
+
+
+
+  
+
+
   <li><a href="/">When Go meets Raspberry Pi</a></li>
 
 
 
   
-  <li class="active"><a href="/tools" class="active">Tools</a></li>
+  <li class="active"><a href="/archive" class="active">Archive</a></li>
 
 
 
@@ -200,27 +207,6 @@ alimama_height=250;
   
 
 
-  <li><a href="/posts">Blogs</a></li>
-
-
-
-  
-
-
-  <li><a href="/tags">Tags</a></li>
-
-
-
-  
-
-
-  <li><a href="/archive">Archive</a></li>
-
-
-
-  
-
-
   <li><a href="/about">About Me</a></li>
 
 
@@ -228,7 +214,21 @@ alimama_height=250;
   
 
 
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/posts">Blogs</a></li>
+
+
+
+  
+
+
+  <li><a href="/tools">Tools</a></li>
+
+
+
+  
+
+
+  <li><a href="/tags">Tags</a></li>
 
 
 
