--- a/gitcafe/pages/index.html
+++ b/gitcafe/pages/index.html
@@ -179,28 +179,14 @@ alimama_height=250;
   
 
 
+  <li><a href="/tags">Tags</a></li>
+
+
+
+  
+
+
   <li><a href="/categories">Categories</a></li>
-
-
-
-  
-
-
-  <li><a href="/">When Go meets Raspberry Pi</a></li>
-
-
-
-  
-  <li class="active"><a href="/archive" class="active">Archive</a></li>
-
-
-
-
-
-  
-
-
-  <li><a href="/pages">Pages</a></li>
 
 
 
@@ -228,7 +214,21 @@ alimama_height=250;
   
 
 
-  <li><a href="/tags">Tags</a></li>
+  <li><a href="/">When Go meets Raspberry Pi</a></li>
+
+
+
+  
+
+
+  <li><a href="/pages">Pages</a></li>
+
+
+
+  
+
+
+  <li><a href="/archive">Archive</a></li>
 
 
 
