--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -179,14 +179,28 @@ alimama_height=250;
   
 
 
-  <li><a href="/archive">Archive</a></li>
+  <li><a href="/">When Go meets Raspberry Pi</a></li>
+
+
+
+  
+  <li class="active"><a href="/posts" class="active">Blogs</a></li>
+
+
 
 
 
   
 
 
-  <li><a href="/tools">Tools</a></li>
+  <li><a href="/pages">Pages</a></li>
+
+
+
+  
+
+
+  <li><a href="/categories">Categories</a></li>
 
 
 
@@ -200,28 +214,14 @@ alimama_height=250;
   
 
 
-  <li><a href="/">When Go meets Raspberry Pi</a></li>
+  <li><a href="/archive">Archive</a></li>
 
 
 
   
 
 
-  <li><a href="/posts">Blogs</a></li>
-
-
-
-  
-  <li class="active"><a href="/categories" class="active">Categories</a></li>
-
-
-
-
-
-  
-
-
-  <li><a href="/pages">Pages</a></li>
+  <li><a href="/tools">Tools</a></li>
 
 
 
