--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -179,28 +179,21 @@ alimama_height=250;
   
 
 
+  <li><a href="/categories">Categories</a></li>
+
+
+
+  
+
+
   <li><a href="/">When Go meets Raspberry Pi</a></li>
 
 
 
   
-  <li class="active"><a href="/posts" class="active">Blogs</a></li>
 
 
-
-
-
-  
-
-
-  <li><a href="/pages">Pages</a></li>
-
-
-
-  
-
-
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/tools">Tools</a></li>
 
 
 
@@ -221,14 +214,21 @@ alimama_height=250;
   
 
 
-  <li><a href="/tools">Tools</a></li>
+  <li><a href="/posts">Blogs</a></li>
+
+
+
+  
+  <li class="active"><a href="/about" class="active">About Me</a></li>
+
+
 
 
 
   
 
 
-  <li><a href="/about">About Me</a></li>
+  <li><a href="/pages">Pages</a></li>
 
 
 
