--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -186,28 +186,7 @@ alimama_height=250;
   
 
 
-  <li><a href="/">When Go meets Raspberry Pi</a></li>
-
-
-
-  
-
-
-  <li><a href="/tools">Tools</a></li>
-
-
-
-  
-
-
   <li><a href="/tags">Tags</a></li>
-
-
-
-  
-
-
-  <li><a href="/archive">Archive</a></li>
 
 
 
@@ -219,7 +198,14 @@ alimama_height=250;
 
 
   
-  <li class="active"><a href="/about" class="active">About Me</a></li>
+
+
+  <li><a href="/">When Go meets Raspberry Pi</a></li>
+
+
+
+  
+  <li class="active"><a href="/archive" class="active">Archive</a></li>
 
 
 
@@ -229,6 +215,20 @@ alimama_height=250;
 
 
   <li><a href="/pages">Pages</a></li>
+
+
+
+  
+
+
+  <li><a href="/about">About Me</a></li>
+
+
+
+  
+
+
+  <li><a href="/tools">Tools</a></li>
 
 
 
@@ -252,7 +252,7 @@ alimama_height=250;
 
       <footer>
         <p>&copy; <a href="http://weibo.com/hugozhu">Hugo Zhu</a> 2013
-          Powered by <a href="http://www.raspberrypi.org" target="_blank"><img src="http://a0.twimg.com/profile_images/1590336143/Raspi-PGB001_normal.png"/> Raspberry Pi</a>
+          Powered by <a href="http://www.raspberrypi.org" target="_blank"><img src="http://retroburngames.com/bytrix/media/images/28_icon.jpg"/> Raspberry Pi</a>
           with help from <a href="http://github.com/wendal/gor" target="_blank" title="Gor -- Fast Blog">Gor</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
 		  and Idea from <a href="http://ruhoh.com" target="_blank" title="The Definitive Technical Blogging Framework">ruhoh</a>
