--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -179,14 +179,14 @@ alimama_height=250;
   
 
 
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/tools">Tools</a></li>
 
 
 
   
 
 
-  <li><a href="/tags">Tags</a></li>
+  <li><a href="/about">About Me</a></li>
 
 
 
@@ -205,7 +205,21 @@ alimama_height=250;
 
 
   
-  <li class="active"><a href="/archive" class="active">Archive</a></li>
+
+
+  <li><a href="/categories">Categories</a></li>
+
+
+
+  
+
+
+  <li><a href="/archive">Archive</a></li>
+
+
+
+  
+  <li class="active"><a href="/tags" class="active">Tags</a></li>
 
 
 
@@ -215,20 +229,6 @@ alimama_height=250;
 
 
   <li><a href="/pages">Pages</a></li>
-
-
-
-  
-
-
-  <li><a href="/about">About Me</a></li>
-
-
-
-  
-
-
-  <li><a href="/tools">Tools</a></li>
 
 
 
