--- a/pages/index.html
+++ b/pages/index.html
@@ -77,7 +77,7 @@ alimama_tks.c_i=0;
 </script>
 <script type="text/javascript" src="http://a.alimama.cn/inf.js"></script>
 <br/>
-  <a onclick="clk_track('ad_home_pi')" href="http://s.click.taobao.com/t?e=zGU34CA7K%2BPkqB04MQzdgG3VSuWRI1IF3n%2FzhW5HbKnj4dMMnZV62W6Vrr4aYHB0LrtzeEqVzfF8UMo0UFO03%2Faad4M%3D"><img style="border:1px solid #ccc;" width="270" height="270" src="http://img03.taobaocdn.com/bao/uploaded/i3/14364033184428336/T13oBtXwRbXXXXXXXX_!!0-item_pic.jpg_270x270.jpg"/></a><div style="text-align:right;padding-right:40px">淘宝推广</div></div>
+<a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DIvgifoFnYOEcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAprpiL7eedLBGAcW%2BgUaNBItyCA8kPsK20DQUmvVyfKQaZdJdwyDgalbY%2Bzpq8pT0%2Bdn1BbglxZYxUhy8exlzcq9AmARIwX9K2Zg%2BdzdQFOwfMRvoxSVDSdLyrb2g0H2G5JcxXijM%2BwneEHpPTskRHnPKdU%2FdTrgjbw4MC6y5nKlXF%2B87KN7TKeiZ%2BQMlGz6FQ%3D%3D" target="_blank"><img src="http://gtms02.alicdn.com/tps/i2/T1j65yFNFcXXb1ZJrl-250-250.jpg" /></a>
 
 <ul><h5>常用链接</h5>
 <li><a href="https://gist.github.com/4440996">在Raspberry Pi上听豆瓣电台</a></li>
@@ -109,9 +109,6 @@ alimama_tks.c_i=0;
 
 <a href="https://xively.com/feeds/92372"><img src="https://api.cosm.com/v2/feeds/92372/datastreams/2.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Raspberry%20Pi%E7%9A%84CPU%E6%B8%A9%E5%BA%A6&show_axis_labels=false&detailed_grid=true&scale="/></a>
 
-<a href="https://xively.com/feeds/119331"><img src="https://api.cosm.com/v2/feeds/119331/datastreams/2.png?width=340&height=180&colour=%23f15a24&duration=2days&title=室内湿度&show_axis_labels=false&detailed_grid=true&scale="/></a>
-
-<a href="https://xively.com/feeds/119331"><img src="https://api.cosm.com/v2/feeds/119331/datastreams/1.png?width=340&height=180&colour=%23f15a24&duration=2days&title=室内温度&show_axis_labels=false&detailed_grid=true&scale="/></a>
 </div>
 
 <br/><br/>
