--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -179,6 +179,34 @@ alimama_height=250;
   
 
 
+  <li><a href="/tags">Tags</a></li>
+
+
+
+  
+
+
+  <li><a href="/archive">Archive</a></li>
+
+
+
+  
+  <li class="active"><a href="/pages" class="active">Pages</a></li>
+
+
+
+
+
+  
+
+
+  <li><a href="/posts">Blogs</a></li>
+
+
+
+  
+
+
   <li><a href="/tools">Tools</a></li>
 
 
@@ -193,13 +221,6 @@ alimama_height=250;
   
 
 
-  <li><a href="/posts">Blogs</a></li>
-
-
-
-  
-
-
   <li><a href="/">When Go meets Raspberry Pi</a></li>
 
 
@@ -208,27 +229,6 @@ alimama_height=250;
 
 
   <li><a href="/categories">Categories</a></li>
-
-
-
-  
-
-
-  <li><a href="/archive">Archive</a></li>
-
-
-
-  
-  <li class="active"><a href="/tags" class="active">Tags</a></li>
-
-
-
-
-
-  
-
-
-  <li><a href="/pages">Pages</a></li>
 
 
 
