--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -177,21 +177,7 @@ alimama_height=250;
 <ul>
 
   
-
-
-  <li><a href="/tags">Tags</a></li>
-
-
-
-  
-
-
-  <li><a href="/archive">Archive</a></li>
-
-
-
-  
-  <li class="active"><a href="/pages" class="active">Pages</a></li>
+  <li class="active"><a href="/archive" class="active">Archive</a></li>
 
 
 
@@ -200,14 +186,7 @@ alimama_height=250;
   
 
 
-  <li><a href="/posts">Blogs</a></li>
-
-
-
-  
-
-
-  <li><a href="/tools">Tools</a></li>
+  <li><a href="/pages">Pages</a></li>
 
 
 
@@ -221,7 +200,7 @@ alimama_height=250;
   
 
 
-  <li><a href="/">When Go meets Raspberry Pi</a></li>
+  <li><a href="/posts">Blogs</a></li>
 
 
 
@@ -229,6 +208,27 @@ alimama_height=250;
 
 
   <li><a href="/categories">Categories</a></li>
+
+
+
+  
+
+
+  <li><a href="/tools">Tools</a></li>
+
+
+
+  
+
+
+  <li><a href="/">When Go meets Raspberry Pi</a></li>
+
+
+
+  
+
+
+  <li><a href="/tags">Tags</a></li>
 
 
 
