--- a/compiled/index.html
+++ b/compiled/index.html
@@ -195,24 +195,8 @@
 <hr/>
 
 <div style="float:right;padding-right:80px">
-<script type="text/javascript">
-alimama_pid="mm_12926928_3484851_11423954";
-alimama_type="g";
-alimama_tks={};
-alimama_tks.style_i=1;
-alimama_tks.lg_i=1;
-alimama_tks.w_i="300";
-alimama_tks.h_i=45;
-alimama_tks.btn_i=1;
-alimama_tks.txt_s="树莓派";
-alimama_tks.hot_i=0;
-alimama_tks.hc_c="0065FF";
-alimama_tks.cid_i="50008090";
-alimama_tks.c_i=0;
-</script>
-<script type="text/javascript" src="http://a.alimama.cn/inf.js"></script>
-<br/>
-<a onclick="clk_track('ad_home_pi')" href="http://s.click.taobao.com/t?e=m%3D2%26s%3DIvgifoFnYOEcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAprpiL7eedLBGAcW%2BgUaNBItyCA8kPsK20DQUmvVyfKQaZdJdwyDgalbY%2Bzpq8pT0%2Bdn1BbglxZYxUhy8exlzcq9AmARIwX9K2Zg%2BdzdQFOwfMRvoxSVDSdLyrb2g0H2G5JcxXijM%2BwneEHpPTskRHnPKdU%2FdTrgjbw4MC6y5nKlXF%2B87KN7TKeiZ%2BQMlGz6FQ%3D%3D" target="_blank"><img src="http://gtms02.alicdn.com/tps/i2/T1j65yFNFcXXb1ZJrl-250-250.jpg" style="border:1px solid #ccc;" width="270" height="270" /></a>
+<a onclick="clk_track('ad_home_pi')" href="http://s.click.taobao.com/t?e=m%3D2%26s%3DIvgifoFnYOEcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAprpiL7eedLBGAcW%2BgUaNBItyCA8kPsK20DQUmvVyfKQaZdJdwyDgalbY%2Bzpq8pT0%2Bdn1BbglxZYxUhy8exlzcq9AmARIwX9K2Zg%2BdzdQFOwfMRvoxSVDSdLyrb2g0H2G5JcxXijM%2BwneEHpPTskRHnPKdU%2FdTrgjbw4MC6y5nKlXF%2B87KN7TKeiZ%2BQMlGz6FQ%3D%3D" target="_blank"><img src="http://gtms02.alicdn.com/tps/i2/T1j65yFNFcXXb1ZJrl-250-250.jpg" style="border:1px solid #ccc;" width="250" height="250" /></a>
+</div>
 
 <ul><h5>常用链接</h5>
 <li><a href="https://gist.github.com/4440996">在Raspberry Pi上听豆瓣电台</a></li>
@@ -254,13 +238,9 @@ alimama_tks.c_i=0;
         <hr/>
 
         <center>
-        <script type="text/javascript"> 
-        alimama_pid="mm_12926928_3484851_11458495"; 
-        alimama_width=950; 
-        alimama_height=90; 
-        </script> 
-        <script src="http://a.alimama.cn/inf.js" type="text/javascript"> 
-        </script>
+
+<a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DIvgifoFnYOEcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAprpiL7eedLBGAcW%2BgUaNBItyCA8kPsK20DQUmvVyfKQaZdJdwyDgalbY%2Bzpq8pT0%2Bdn1BbglxZYxUhy8exlzcq9AmARIwX9K2Zg%2BdzdQFOwfMRvoxSVDSdLyrb2g0H2G5JcxXijM%2BwneEHpPTskRHnPKdU%2FdTrgjbw4MC6y5nKlXF%2B87KN7TKeiZ%2BQMlGz6FQ%3D%3D" target="_blank"><img src="http://gtms01.alicdn.com/tps/i1/T1S.KAFMNbXXcp9.bi-950-90.jpg" /></a>
+
         </center>
 
       </div>
