--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -177,23 +177,9 @@ alimama_height=250;
 <ul>
 
   
-  <li class="active"><a href="/archive" class="active">Archive</a></li>
-
-
-
-
-
-  
 
 
   <li><a href="/pages">Pages</a></li>
-
-
-
-  
-
-
-  <li><a href="/about">About Me</a></li>
 
 
 
@@ -207,14 +193,14 @@ alimama_height=250;
   
 
 
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/archive">Archive</a></li>
 
 
 
   
 
 
-  <li><a href="/tools">Tools</a></li>
+  <li><a href="/tags">Tags</a></li>
 
 
 
@@ -228,7 +214,21 @@ alimama_height=250;
   
 
 
-  <li><a href="/tags">Tags</a></li>
+  <li><a href="/about">About Me</a></li>
+
+
+
+  
+
+
+  <li><a href="/categories">Categories</a></li>
+
+
+
+  
+  <li class="active"><a href="/tools" class="active">Tools</a></li>
+
+
 
 
 
@@ -239,13 +239,9 @@ alimama_height=250;
         <hr/>
 
         <center>
-        <script type="text/javascript"> 
-        alimama_pid="mm_12926928_3484851_11458495"; 
-        alimama_width=950; 
-        alimama_height=90; 
-        </script> 
-        <script src="http://a.alimama.cn/inf.js" type="text/javascript"> 
-        </script>
+
+<a href="http://s.click.taobao.com/t?e=m%3D2%26s%3DIvgifoFnYOEcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAprpiL7eedLBGAcW%2BgUaNBItyCA8kPsK20DQUmvVyfKQaZdJdwyDgalbY%2Bzpq8pT0%2Bdn1BbglxZYxUhy8exlzcq9AmARIwX9K2Zg%2BdzdQFOwfMRvoxSVDSdLyrb2g0H2G5JcxXijM%2BwneEHpPTskRHnPKdU%2FdTrgjbw4MC6y5nKlXF%2B87KN7TKeiZ%2BQMlGz6FQ%3D%3D" target="_blank"><img src="http://gtms01.alicdn.com/tps/i1/T1S.KAFMNbXXcp9.bi-950-90.jpg" /></a>
+
         </center>
 
       </div>
