--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -120,13 +120,6 @@
   
 
 
-  <li><a href="/tools">Tools</a></li>
-
-
-
-  
-
-
   <li><a href="/posts">Blogs</a></li>
 
 
@@ -148,6 +141,13 @@
   
 
 
+  <li><a href="/about">About Me</a></li>
+
+
+
+  
+
+
   <li><a href="/categories">Categories</a></li>
 
 
@@ -155,12 +155,12 @@
   
 
 
-  <li><a href="/archive">Archive</a></li>
+  <li><a href="/tools">Tools</a></li>
 
 
 
   
-  <li class="active"><a href="/about" class="active">About Me</a></li>
+  <li class="active"><a href="/archive" class="active">Archive</a></li>
 
 
 
