--- a/pages/tools.html
+++ b/pages/tools.html
@@ -38,6 +38,17 @@ function decode() {
 </form>
 
 
+<h1>Image Base64 Encoder</h1>
+
+<form method="POST" action="https://go.myalert.info/img_base64.php" enctype="multipart/form-data">
+图片地址：<input name="url" cols="200" rows="5" id="url" style="width:500px;"/> <br/>
+上传图片：<input type="file" name="upload"/>
+<div>
+<input type="submit" value="Encode">
+</div>
+</form>
+
+
 <script type="text/javascript">
 <!--
 
