--- a/pages/index.html
+++ b/pages/index.html
@@ -60,7 +60,7 @@ description: When Go meets Raspberry Pi
 <hr/>
 
 <div style="float:right;padding-right:80px">
-<a onclick="clk_track('ad_home_pi')" href="http://s.click.taobao.com/t?e=m%3D2%26s%3DIvgifoFnYOEcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAprpiL7eedLBGAcW%2BgUaNBItyCA8kPsK20DQUmvVyfKQaZdJdwyDgalbY%2Bzpq8pT0%2Bdn1BbglxZYxUhy8exlzcq9AmARIwX9K2Zg%2BdzdQFOwfMRvoxSVDSdLyrb2g0H2G5JcxXijM%2BwneEHpPTskRHnPKdU%2FdTrgjbw4MC6y5nKlXF%2B87KN7TKeiZ%2BQMlGz6FQ%3D%3D" target="_blank"><img src="http://gtms02.alicdn.com/tps/i2/T1j65yFNFcXXb1ZJrl-250-250.jpg" style="border:1px solid #ccc;" width="250" height="250" /></a>
+<a data-type="3" data-tmpl="320x250" data-tmplid="186" data-rd="2" data-style="2" data-border="1" href="#"></a>
 </div>
 
 <ul><h5>常用链接</h5>
