--- a/pages/index.html
+++ b/pages/index.html
@@ -89,6 +89,15 @@ description: When Go meets Raspberry Pi
 
 <hr/>
 <div align="center">
+
+
+<a href="https://xively.com/feeds/119331"><img src="https://api.cosm.com/v2/feeds/119331/datastreams/1.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Router+Download+Kbps&show_axis_labels=false&detailed_grid=true&scale="/></a>
+
+<a href="https://xively.com/feeds/119331"><img src="https://api.cosm.com/v2/feeds/119331/datastreams/2.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Router+Upload+Kbps&show_axis_labels=false&detailed_grid=true&scale="/></a>
+
+
+<br/>
+
 <a href="https://xively.com/feeds/92372"><img src="https://api.cosm.com/v2/feeds/92372/datastreams/1.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Raspberry%20Pi%E7%9A%84CPU%20Load&show_axis_labels=false&detailed_grid=true&scale="/></a>
 
 <a href="https://xively.com/feeds/92372"><img src="https://api.cosm.com/v2/feeds/92372/datastreams/2.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Raspberry%20Pi%E7%9A%84CPU%E6%B8%A9%E5%BA%A6&show_axis_labels=false&detailed_grid=true&scale="/></a>
