--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@ description: When Go meets Raspberry Pi
 </div>
 
 <div class="span6">
-<h3>最近项目</h3>
+<h3>文章标签</h3>
 
 <ul class="tag_box inline">
 {{# tags }}
@@ -32,20 +32,20 @@ description: When Go meets Raspberry Pi
 {{/ tags }}
 </ul>
   
+<div>
+<a data-type="3" data-tmpl="250x250" data-tmplid="185" data-rd="2" data-style="2" data-border="1" href="#"></a>
+</div>
+
 </div>
 </div>
 
 <hr/>
 
-<div style="float:right;padding-right:80px">
-<a href="http://redirect.simba.taobao.com/rd?w=unionnojs&f=http%3A%2F%2Fai.taobao.com%2Fauction%2Fedetail.htm%3Fe%3DnjYzy%252Ftt2CW6k0Or%252B%252BH4tBlrY9SezfCo72fxp1Fq8BiLltG5xFicOdXrTUTgh9sMDPIwxrc30rjBoGD2ylNha3ojf%252BmJLFzbH3L0D1awWVmAlhIdkNkW1m3abJM7sDg2yvRvrpTLVEIvCTRv9snobw%253D%253D%26ptype%3D100010%26from%3Dbasic&k=5ccfdb950740ca16&c=un&b=alimm_0&p=mm_12926928_3484851_23080852"><img src="http://img02.taobaocdn.com/bao/uploaded/i2/2294443291/TB23qDWbVXXXXbmXXXXXXXXXXXX_!!2294443291.jpg_430x430.jpg" border="0"/></a>
-</div>
-
 <div align="left">
 
 <a href="https://xively.com/feeds/119331"><img src="https://api.cosm.com/v2/feeds/119331/datastreams/1.png?width=340&height=180&colour=%23f15a24&duration=1days&title=Router+Download+Kbps&show_axis_labels=false&detailed_grid=true&scale="/></a>
 
-<br/>
+
 
 <a href="https://xively.com/feeds/119331"><img src="https://api.cosm.com/v2/feeds/119331/datastreams/2.png?width=340&height=180&colour=%23f15a24&duration=1days&title=Router+Upload+Kbps&show_axis_labels=false&detailed_grid=true&scale="/></a>
 
@@ -53,10 +53,11 @@ description: When Go meets Raspberry Pi
 
 <a href="https://xively.com/feeds/119331"><img src="https://api.cosm.com/v2/feeds/119331/datastreams/3.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Raspberry%20Pi%E7%9A%84CPU%20Load&show_axis_labels=false&detailed_grid=true&scale="/></a>
 
-<br/>
+
 
 <a href="https://xively.com/feeds/119331"><img src="https://api.cosm.com/v2/feeds/119331/datastreams/4.png?width=340&height=180&colour=%23f15a24&duration=2days&title=Raspberry%20Pi%E7%9A%84CPU%E6%B8%A9%E5%BA%A6&show_axis_labels=false&detailed_grid=true&scale="/></a>
 
 </div>
 
 <br/><br/>
+
