--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@ description: When Go meets Raspberry Pi
 {{/ tags }}
 </ul>
   
-<div>
+<div align="center">
 <a data-type="3" data-tmpl="250x250" data-tmplid="185" data-rd="2" data-style="2" data-border="1" href="#"></a>
 </div>
 
@@ -41,7 +41,7 @@ description: When Go meets Raspberry Pi
 
 <hr/>
 
-<div align="left">
+<div align="center">
 
 <a href="https://xively.com/feeds/119331"><img src="https://api.cosm.com/v2/feeds/119331/datastreams/1.png?width=340&height=180&colour=%23f15a24&duration=1days&title=Router+Download+Kbps&show_axis_labels=false&detailed_grid=true&scale="/></a>
 
