--- a/pages/index.html
+++ b/pages/index.html
@@ -33,7 +33,7 @@ description: When Go meets Raspberry Pi
 </ul>
   
 <div align="center">
-<a data-type="3" data-tmpl="250x250" data-tmplid="185" data-rd="2" data-style="2" data-border="1" href="#"></a>
+<a href="https://m.do.co/c/e85760c85e44"><img src="https://www.digitalocean.com/assets/images/logos-badges/png/DO_Logo_Vertical_Blue-75e0d68b.png"/></a>
 </div>
 
 </div>
