--- a/pages/index.html
+++ b/pages/index.html
@@ -33,6 +33,9 @@ description: When Go meets Raspberry Pi
 </ul>
   
 <div align="center">
+<p>
+  $5一个月的高速VPS（旧金山机房的速度不错）
+</p>
 <a href="https://m.do.co/c/e85760c85e44"><img src="https://www.digitalocean.com/assets/images/logos-badges/png/DO_Logo_Vertical_Blue-75e0d68b.png"/></a>
 </div>
 
