--- a/pages/index.html
+++ b/pages/index.html
@@ -32,11 +32,12 @@ description: When Go meets Raspberry Pi
 {{/ tags }}
 </ul>
   
-<div align="center">
-<p>
+<div align="center" style="border:1px solid #cccccc">
+<p style="font-color:#FF0000">
+  <br/>
   $5一个月的高速VPS（旧金山机房的速度不错）
 </p>
-<a href="https://m.do.co/c/e85760c85e44"><img width="250" src="https://www.digitalocean.com/assets/images/logos-badges/png/DO_Logo_Vertical_Blue-75e0d68b.png"/></a>
+<a href="https://m.do.co/c/e85760c85e44"><img width="300" src="https://www.digitalocean.com/assets/images/logos-badges/png/DO_Logo_Vertical_Blue-75e0d68b.png"/></a>
 </div>
 
 </div>
