--- a/pages/index.html
+++ b/pages/index.html
@@ -33,7 +33,7 @@ description: When Go meets Raspberry Pi
 </ul>
   
 <div align="center" style="border:1px solid #cccccc">
-<p style="font-color:#FF0000">
+<p style="color:#FF0000">
   <br/>
   $5一个月的高速VPS（旧金山机房的速度不错）
 </p>
