--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -124,21 +124,21 @@
   
 
 
+  <li><a href="/tags">Tags</a></li>
+
+
+
+  
+  <li class="active"><a href="/about" class="active">About Me</a></li>
+
+
+
+
+
+  
+
+
   <li><a href="/pages">Pages</a></li>
-
-
-
-  
-
-
-  <li><a href="/about">About Me</a></li>
-
-
-
-  
-
-
-  <li><a href="/archive">Archive</a></li>
 
 
 
@@ -152,13 +152,6 @@
   
 
 
-  <li><a href="/posts">Blogs</a></li>
-
-
-
-  
-
-
   <li><a href="/categories">Categories</a></li>
 
 
@@ -166,14 +159,21 @@
   
 
 
-  <li><a href="/tags">Tags</a></li>
+  <li><a href="/archive">Archive</a></li>
 
 
 
   
-  <li class="active"><a href="/tools" class="active">Tools</a></li>
 
 
+  <li><a href="/tools">Tools</a></li>
+
+
+
+  
+
+
+  <li><a href="/posts">Blogs</a></li>
 
 
 
