--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -124,12 +124,26 @@
   
 
 
-  <li><a href="/tags">Tags</a></li>
+  <li><a href="/categories">Categories</a></li>
 
 
 
   
-  <li class="active"><a href="/about" class="active">About Me</a></li>
+
+
+  <li><a href="/tools">Tools</a></li>
+
+
+
+  
+
+
+  <li><a href="/">When Go meets Raspberry Pi</a></li>
+
+
+
+  
+  <li class="active"><a href="/posts" class="active">Blogs</a></li>
 
 
 
@@ -145,14 +159,7 @@
   
 
 
-  <li><a href="/">When Go meets Raspberry Pi</a></li>
-
-
-
-  
-
-
-  <li><a href="/categories">Categories</a></li>
+  <li><a href="/about">About Me</a></li>
 
 
 
@@ -166,14 +173,7 @@
   
 
 
-  <li><a href="/tools">Tools</a></li>
-
-
-
-  
-
-
-  <li><a href="/posts">Blogs</a></li>
+  <li><a href="/tags">Tags</a></li>
 
 
 
