--- a/compiled/pages/index.html
+++ b/compiled/pages/index.html
@@ -124,13 +124,6 @@
   
 
 
-  <li><a href="/categories">Categories</a></li>
-
-
-
-  
-
-
   <li><a href="/tools">Tools</a></li>
 
 
@@ -139,20 +132,6 @@
 
 
   <li><a href="/">When Go meets Raspberry Pi</a></li>
-
-
-
-  
-  <li class="active"><a href="/posts" class="active">Blogs</a></li>
-
-
-
-
-
-  
-
-
-  <li><a href="/pages">Pages</a></li>
 
 
 
@@ -166,14 +145,35 @@
   
 
 
-  <li><a href="/archive">Archive</a></li>
+  <li><a href="/categories">Categories</a></li>
 
 
 
   
 
 
-  <li><a href="/tags">Tags</a></li>
+  <li><a href="/posts">Blogs</a></li>
+
+
+
+  
+
+
+  <li><a href="/archive">Archive</a></li>
+
+
+
+  
+  <li class="active"><a href="/tags" class="active">Tags</a></li>
+
+
+
+
+
+  
+
+
+  <li><a href="/pages">Pages</a></li>
 
 
 
