--- a/pages/index.html
+++ b/pages/index.html
@@ -1,10 +1,10 @@
 ---
-title : When Go meets Raspberry Pi
-description: When Go meets Raspberry Pi
+title : When Go meets Raspberry Pi 4
+description: When Go meets Raspberry Pi 4
 ---
 
 <div class="jumbotron">
-<p class="lead">This site is running on a <a href="http://www.raspberrypi.org" target="_blank">Raspberry Pi</a>, most codes are written in <a href="http://golang.org" target="_blank">Go</a> programming language</p>
+<p class="lead">This site is running on a <a href="http://www.raspberrypi.org" target="_blank">Raspberry Pi 4</a>, most codes are written in <a href="http://golang.org" target="_blank">Go</a> programming language</p>
 </div>
 
 <hr/>
