--- a/others/404.html
+++ b/others/404.html
@@ -1,5 +1,5 @@
 <html>
     <script>
-        window.location.href='http://hugozhu.myalert.info/archive/'
+        window.location.href='/archive/'
     </script>
 </html>
