--- a/pages/index.html
+++ b/pages/index.html
@@ -34,7 +34,7 @@ description: When Go meets Raspberry Pi 4
   
 <div align="center" style="border:1px solid #cccccc">
 
-    <a href="https://qpdz.taobao.com/index.htm"><img src="https://gd1.alicdn.com/imgextra/i3/367142366/O1CN01vUcEWk1TLfh3O0P9C_!!367142366.jpg" width="360"/></a>
+    <a href="https://www.7sgood.com/products/P22YF1615561?utm_source=blog&utm_medium=link&utm_campaign=hugozhu"><img src="https://item.hhocool.com/image/jpg/2022-11-15/512661555209482240.jpg?image_process=resize,w_1200" width="360"/></a>
 
 <br/>
   
