--- a/pages/index.html
+++ b/pages/index.html
@@ -32,16 +32,7 @@ description: When Go meets Raspberry Pi 4
 {{/ tags }}
 </ul>
   
-<div align="center" style="border:1px solid #cccccc">
-
-    <a href="https://www.7sgood.com/products/P22YF1615561?utm_source=blog&utm_medium=link&utm_campaign=hugozhu"><img src="https://item.hhocool.com/image/jpg/2022-11-15/512661555209482240.jpg?image_process=resize,w_1200" width="360"/></a>
-
-<br/>
-  
-<p style="color:#FF0000">
-  <br/>
-</p>
-</div>
+<div align="center" style="border:1px solid #cccccc"><a href="https://www.7sgood.com/products/P22YF1615561?utm_source=blog&utm_medium=link&utm_campaign=hugozhu"><img src="https://item.hhocool.com/image/jpg/2022-11-15/512661555209482240.jpg?image_process=resize,w_460" width="460" height="460"/></a></div>
 
 </div>
 </div>
