--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,13 @@ description: When Go meets Raspberry Pi 4
 {{/ tags }}
 </ul>
   
-<div align="center" style="border:1px solid #cccccc"><a href="https://www.7sgood.com/products/P22YF1615561?utm_source=blog&utm_medium=link&utm_campaign=hugozhu"><img src="https://item.hhocool.com/image/jpg/2022-11-15/512661555209482240.jpg?image_process=resize,w_460" width="460" height="460"/></a></div>
+<div align="center" style="border:1px solid #cccccc">
+
+<a href="https://link.7sgood.com/s/2eFKgF"><img src="https://static.hhocool.com/images/a10546e7-d028-4bc8-bb60-0f7187538bc6_515x128.png?image_process=resize,w_640" alt="Download 7sGood App Now!" width="460" height="460"/></a>
+
+<a href="https://www.7sgood.com/products/P22YF1615561?utm_source=blog&utm_medium=link&utm_campaign=hugozhu"><img src="https://item.hhocool.com/image/jpg/2022-11-15/512661555209482240.jpg?image_process=resize,w_460" alt="Buy GPods Now!" width="460" height="460"/></a>
+
+</div>
 
 </div>
 </div>
