--- a/pages/index.html
+++ b/pages/index.html
@@ -1,16 +1,16 @@
 ---
-title : When Go meets Raspberry Pi 4
-description: When Go meets Raspberry Pi 4
+title : All about Raspberry Pi 5
+description: All about Raspberry Pi 5
 ---
 
 <div class="jumbotron">
-<p class="lead">This site is running on a <a href="http://www.raspberrypi.org" target="_blank">Raspberry Pi 4</a>, most codes are written in <a href="http://golang.org" target="_blank">Go</a> programming language</p>
+<p class="lead">This site is running on a <a href="http://www.raspberrypi.org" target="_blank">Raspberry Pi 5</a>
 </div>
 
 <hr/>
 <div class="row-fluid marketing">
 <div class="span6">
-<h3>2024最近文章</h3>
+<h3>Latest posts</h3>
   {{# posts_latest }}
   <h4><a href="{{url}}">{{title}}</a></h4>
   <p>{{description}}</p>
@@ -18,7 +18,7 @@ description: When Go meets Raspberry Pi 4
 
   <div class="pagination">
     <ul>
-        <li><a href="/posts/2/">更多文章...</a></li>
+        <li><a href="/posts/2/">More...</a></li>
     </ul>
   </div>
 
@@ -32,7 +32,7 @@ description: When Go meets Raspberry Pi 4
 </div>
 
 <div class="span6">
-<h3>文章标签</h3>
+<h3>Tags</h3>
 
 <ul class="tag_box inline">
 {{# tags }}
@@ -51,4 +51,3 @@ description: When Go meets Raspberry Pi 4
 <hr/>
 
 <br/><br/>
-
