--- a/pages/index.html
+++ b/pages/index.html
@@ -22,6 +22,14 @@ description: All about Raspberry Pi 5
     </ul>
   </div>
 
+  <div>
+    <a href="https://link.7sgood.com/s/2eFKgF"><img src="https://static.hhocool.com/images/a10546e7-d028-4bc8-bb60-0f7187538bc6_515x128.png?image_process=resize,w_640" alt="Download 7sGood App Now!" width="460" height="460"/></a>
+    <br/>    
+    <a href="https://link.7sgood.com/s/2eFKgF"><img src="https://t4.ftcdn.net/jpg/03/76/66/29/360_F_376662920_zqGXBodBGhHkUQEFbnHt1FuQSV7stYVi.jpg" alt="Download 7sGood App Now!" width="460" height="460"/></a>
+  </div>
+</div>
+
+<div class="span6">
   <h3>Tags</h3>
 
   <ul class="tag_box inline">
@@ -29,13 +37,6 @@ description: All about Raspberry Pi 5
     {{> tags_list }}
   {{/ tags }}
   </ul>
-
-  <div>
-    <a href="https://link.7sgood.com/s/2eFKgF"><img src="https://static.hhocool.com/images/a10546e7-d028-4bc8-bb60-0f7187538bc6_515x128.png?image_process=resize,w_640" alt="Download 7sGood App Now!" width="460" height="460"/></a>
-    <br/>    
-    <a href="https://link.7sgood.com/s/2eFKgF"><img src="https://t4.ftcdn.net/jpg/03/76/66/29/360_F_376662920_zqGXBodBGhHkUQEFbnHt1FuQSV7stYVi.jpg" alt="Download 7sGood App Now!" width="460" height="460"/></a>
-  </div>
-</div>
 
 </div>
 <hr/>
